# chronokeep-portal

./: .env  .gitignore  Cargo.toml  README.md  build_install.sh  compile.sh  cross_compile.sh  deploy.sh  files.sh  install.sh  pi-release.sh  setup_cross.sh  uninstall.sh  update.sh
.github/workflows/: deploy.yml
scripts/: build-uninstall.sh  deploy.sh
src/: battery.rs  buttons.rs  control.rs  database.rs  defaults.rs  llrp.rs  main.rs  notifications.rs  notifier.rs  objects.rs  processor.rs  reader.rs  remote.rs  results.rs  screen.rs  sound_board.rs  types.rs  util.rs
src/control/: cli.rs  keepalive.rs  socket.rs  sound.rs  zero_conf.rs
src/control/socket/: errors.rs  notifications.rs  requests.rs  responses.rs
src/database/: memstore.rs  sqlite.rs
src/database/memstore/: tests.rs
src/database/sqlite/: tests.rs
src/database/sqlite/tests/: test_reader.rs
src/llrp/: bit_masks.rs  message_types.rs  parameter_types.rs  requests.rs
src/network/: api.rs  results.rs
src/objects/: backup.rs  bibchip.rs  event.rs  event_year.rs  notification.rs  participant.rs  read.rs  setting.rs  sighting.rs
src/reader/: auto_connect.rs  helpers.rs  llrp.rs  reconnector.rs  zebra.rs
src/reader/zebra/: requests.rs
src/remote/: remote_util.rs  requests.rs  responses.rs  uploader.rs
src/remote/uploader/: info.rs
src/results/: requests.rs  responses.rs
src/screen/: ada.rs  pcf.rs
src/util/: test.rs
