[package]
name = "chronokeep-portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
chrono = "0.4.23"
reqwest = { version = "0.11.14", default-features=false, features = ["blocking", "json", "rustls-tls"] }
socket2 = "0.5.1"
if-addrs = "0.10.1"
rodio = "0.17.3"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]
