[package]
name = "chronokeep-portal"
version = '0.2.4'
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = "0.4.45"
reqwest = { version = "0.13.4", default-features=false, features = ["blocking", "json", "rustls"] }
socket2 = "0.6.4"
if-addrs = "0.15.0"
rodio = "0.22.2"
dotenv = "0.15.0"
ina219 = "0.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22.1", features = ["hal"] }
i2c-character-display = "0.5.1"

[dependencies.rusqlite]
version = "0.40.1"
features = ["bundled"]
